rlang/tests/tests_resources/invalid_tests/invalid_constant.rlang
Constant test := gold'
Constant test1 := -12- -3

